--- a/index.html
+++ b/index.html
@@ -772,116 +772,168 @@
 
 				</div>
 				<div class="col-md-8">
-					<div>
-						<div>
-							<div>
-								<div class="table100 ver1 m-b-110">
-									<div class="table100-head">
-										<table>
-											<thead>
-											<tr class="row100 head">
-												<th class="cell100 column1">Service Type</th>
-												<th class="cell100 column2">Length</th>
-												<th class="cell100 column3">Price</th>
-												<!--<th class="cell100 column4">Trainer</th>-->
-												<!--<th class="cell100 column5">Spots</th>-->
-											</tr>
-											</thead>
-										</table>
-									</div>
+					<!--<div>-->
+						<!--<div>-->
+							<!--<div>-->
+								<!--<div class="table100 ver1 m-b-110">-->
+									<!--<div class="table100-head">-->
+										<!--<table>-->
+											<!--<thead>-->
+											<!--<tr class="row100 head">-->
+												<!--<th class="cell100 column1">Service Type</th>-->
+												<!--<th class="cell100 column2">Length</th>-->
+												<!--<th class="cell100 column3">Price</th>-->
+												<!--&lt;!&ndash;<th class="cell100 column4">Trainer</th>&ndash;&gt;-->
+												<!--&lt;!&ndash;<th class="cell100 column5">Spots</th>&ndash;&gt;-->
+											<!--</tr>-->
+											<!--</thead>-->
+										<!--</table>-->
+									<!--</div>-->
 
-									<div class="table100-body js-pscroll">
-										<table>
-											<tbody>
-											<tr class="row100 body">
-												<td class="cell100 column1">Aqua Injector</td>
-												<td class="cell100 column2">1hr 30min</td>
-												<td class="cell100 column3">299</td>
-												<!--<td class="cell100 column4">Aaron Chapman</td>-->
-												<!--<td class="cell100 column5">10</td>-->
-											</tr>
+									<!--<div class="table100-body js-pscroll">-->
+										<!--<table>-->
+											<!--<tbody>-->
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Aqua Injector</td>-->
+												<!--<td class="cell100 column2">1hr 30min</td>-->
+												<!--<td class="cell100 column3">299</td>-->
+												<!--&lt;!&ndash;<td class="cell100 column4">Aaron Chapman</td>&ndash;&gt;-->
+												<!--&lt;!&ndash;<td class="cell100 column5">10</td>&ndash;&gt;-->
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Aqua Peel</td>
-												<td class="cell100 column2">1hr 30min</td>
-												<td class="cell100 column3">199</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Aqua Peel</td>-->
+												<!--<td class="cell100 column2">1hr 30min</td>-->
+												<!--<td class="cell100 column3">199</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Beauty Light</td>
-												<td class="cell100 column2">1hr</td>
-												<td class="cell100 column3">99</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Beauty Light</td>-->
+												<!--<td class="cell100 column2">1hr</td>-->
+												<!--<td class="cell100 column3">99</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Black Therapy</td>
-												<td class="cell100 column2">1hr 30min</td>
-												<td class="cell100 column3">150</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Black Therapy</td>-->
+												<!--<td class="cell100 column2">1hr 30min</td>-->
+												<!--<td class="cell100 column3">150</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Gold Therapy</td>
-												<td class="cell100 column2">1hr 30min</td>
-												<td class="cell100 column3">140</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Gold Therapy</td>-->
+												<!--<td class="cell100 column2">1hr 30min</td>-->
+												<!--<td class="cell100 column3">140</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Oxyjet Elixir Treatment</td>
-												<td class="cell100 column2">1hr 20min</td>
-												<td class="cell100 column3">130</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Oxyjet Elixir Treatment</td>-->
+												<!--<td class="cell100 column2">1hr 20min</td>-->
+												<!--<td class="cell100 column3">130</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Gold Plus Modeling Mask</td>
-												<td class="cell100 column2">1hr 20min</td>
-												<td class="cell100 column3">120</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Gold Plus Modeling Mask</td>-->
+												<!--<td class="cell100 column2">1hr 20min</td>-->
+												<!--<td class="cell100 column3">120</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Peppermint Cool Plus Modeling Mask</td>
-												<td class="cell100 column2">1hr 10min</td>
-												<td class="cell100 column3">110</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Peppermint Cool Plus Modeling Mask</td>-->
+												<!--<td class="cell100 column2">1hr 10min</td>-->
+												<!--<td class="cell100 column3">110</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Natural Lightening Plus Modeling Mask</td>
-												<td class="cell100 column2">1hr</td>
-												<td class="cell100 column3">100</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Natural Lightening Plus Modeling Mask</td>-->
+												<!--<td class="cell100 column2">1hr</td>-->
+												<!--<td class="cell100 column3">100</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Collagen Face Mask</td>
-												<td class="cell100 column2">1hr</td>
-												<td class="cell100 column3">90</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Collagen Face Mask</td>-->
+												<!--<td class="cell100 column2">1hr</td>-->
+												<!--<td class="cell100 column3">90</td>-->
 
-											</tr>
+											<!--</tr>-->
 
-											<tr class="row100 body">
-												<td class="cell100 column1">Express Facial</td>
-												<td class="cell100 column2">30min</td>
-												<td class="cell100 column3">50</td>
+											<!--<tr class="row100 body">-->
+												<!--<td class="cell100 column1">Express Facial</td>-->
+												<!--<td class="cell100 column2">30min</td>-->
+												<!--<td class="cell100 column3">50</td>-->
 
-											</tr>
-
-
+											<!--</tr>-->
 
 
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-						</div>
+
+
+											<!--</tbody>-->
+										<!--</table>-->
+									<!--</div>-->
+								<!--</div>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+					<div class="jumbotron bg-none">
+						<h6>SKIN BOOSTER</h6>
+						<p>KEEP YOUR SKIN WELL HYDRATED, REFINES PORES AND SEARS, BRINGS OUT SMOOTHER SKIN, IMPROVES FINE LINES, WRINKLES, AND SKIN TONE, BRIGHTENS AND WHITENS SKIN</p>
+						<p class="center mb-20">1hr 30min/$299</p>
+						<h6>HYDRAFACIAL</h6>
+						<p>CUTTING EDGE , NON-INVASIVE SKIN RESURFACING TREATMENT THAT UTILIZES CLEANSING, EXFOLIATION, EXTRACTION, HYDRATION, AND ANTIOXIDANT PROTECTION</p>
+						<p class="center mb-20">1hr 30min/$199</p>
+						<h6>BEAUTY LIGHT</h6>
+						<p>WHITENS AND REJUVENATES SKIN, STABILIZES SKIN, REMOVES ACNE</p>
+						<p class="center mb-20">1hr/$99</p>
+						<h6>BLACK THERAPY</h6>
+						<p>MAGNETIC FORCE AND MAGNETIC FIELD USING NATURAL BLACK MAGNETITE THAT COMES FROM NORTHERN EUROPE, REMOVE FINE DUST IN PORES AND HEAVY METALS AND STIMULATE BLOOD CIRCULATION AND METABOLISM, MAKING SKIN BRIGHT AND REGENERATED</p>
+						<p class="center mb-20">1hr 30min/$150</p>
+						<h6>GOLD THERAPY</h6>
+						<p>PROVIDES SKIN RESILIENCE BY SLOWING DOWN
+							CONSUMPTION OF COLLAGEN, ACTIVATES SKIN,
+							IMPROVES COMPLEXION, AND COMES WITH A
+							PURIFYING EFFECT TO COMPLETELY REMOVE
+							IMPURITIES INSIDE PORES</p>
+						<p class="center mb-20">1hr 30min/$150</p>
+						<h6>OXYJET ELIXIR TREATMENT</h6>
+						<p>MAKES THE SKIN MOISTURIZED AND
+							SUPPLEMENTED, ACTIVATES SKIN FUNCTION
+							TO MAKE SKIN VITAL AND BRIGHT</p>
+						<p class="center mb-20">1hr 20min/$150</p>
+						<h6>GOLD PLUS MODELING MASK</h6>
+						<p>OFFERS THE YOUTHFULNESS AND RADIANCE
+							TO SKIN TEXTURE WITH AGE-DEFYING AND
+							REJUVENATING EFFECT</p>
+						<p class="center mb-20">1hr 20min/$120</p>
+						<h6>PEPPERMINT COOL PLUS MODELING MASK</h6>
+						<p>HELPS ENHANCE SKIN RENEWAL AND CONTRACT
+							PORES THAT LEAVES SKIN GLOSSY AND HEALTHY
+							STATE, AND REDUCES SKIN REDNESS</p>
+						<p class="center mb-20">1hr 10min/$110</p>
+						<h6>NATURAL LIGHTENING PLUS MODELING MASK</h6>
+						<p>ARBUTIN AND SODIUM HYALURONATE PROMOTES
+							SKIN LIGHTENING AND EVENING SKIN TONE ON ALL
+							SKIN TYPES BY BLOCKING EPIDERMAL MELANIN
+							BIOSYNTHESIS WITH MOISTURIZING</p>
+						<p class="center mb-20">1hr/$100</p>
+						<h6>COLLAGEN FACE MASK</h6>
+						<p>HELPS PREVENT AND REVERSE THE SIGNS OF
+							PREMATURE AGING CAUSED BY HARSH
+							ENVIRONMENTAL FACTORS AND DIMINISHES
+							WRINKLE</p>
+						<p class="center mb-20">1hr/$90</p>
+						<h6>EXPRESS FACIAL</h6>
+						<p>A PERFECT FACIAL TREATMENT FOR SOMEONE WITH
+							LIMITED TIME AVAILABLE</p>
+						<p class="center mb-20">30min/$50</p>
 					</div>
-				</div>
 			</div>
 
 
